Bug 4244 - The Bngl parser now accepts a $ sign before a seed species, which means that the seed species is clamped.
svn path=/vcell/trunk/VCell/; revision=17661

--- a/src/org/vcell/model/bngl/Parser.html
+++ b/src/org/vcell/model/bngl/Parser.html
@@ -45,7 +45,7 @@
 <TR>
 <TD ALIGN=RIGHT VALIGN=BASELINE><A NAME="prod13">SeedSpecies</A></TD>
 <TD ALIGN=CENTER VALIGN=BASELINE>::=</TD>
-<TD ALIGN=LEFT VALIGN=BASELINE><A HREF="#prod14">SpeciesPattern</A> ( "{" <A HREF="#prod10">Expression</A> "}" )</TD>
+<TD ALIGN=LEFT VALIGN=BASELINE>( &lt;CLAMP&gt; )? <A HREF="#prod14">SpeciesPattern</A> ( "{" <A HREF="#prod10">Expression</A> "}" )</TD>
 </TR>
 <TR>
 <TD ALIGN=RIGHT VALIGN=BASELINE><A NAME="prod5">ReactionRulesBlock</A></TD>
