Bug 4254 - When parsing the Observables, patterns can be separated by either space or comma.
svn path=/vcell/trunk/VCell/; revision=17676

--- a/src/org/vcell/model/bngl/Parser.html
+++ b/src/org/vcell/model/bngl/Parser.html
@@ -60,7 +60,7 @@
 <TR>
 <TD ALIGN=RIGHT VALIGN=BASELINE><A NAME="prod16">Observable</A></TD>
 <TD ALIGN=CENTER VALIGN=BASELINE>::=</TD>
-<TD ALIGN=LEFT VALIGN=BASELINE>( ( &lt;INTEGER&gt; )? ( ( &lt;MOLECULES&gt; ) | ( &lt;SPECIES&gt; ) ) ( &lt;IDENTIFIER&gt; ) ( <A HREF="#prod14">SpeciesPattern</A> )+ )</TD>
+<TD ALIGN=LEFT VALIGN=BASELINE>( ( &lt;INTEGER&gt; )? ( ( &lt;MOLECULES&gt; ) | ( &lt;SPECIES&gt; ) ) ( &lt;IDENTIFIER&gt; ) ( <A HREF="#prod14">SpeciesPattern</A> ( ( &lt;COMMA&gt; )? <A HREF="#prod14">SpeciesPattern</A> )* ) )</TD>
 </TR>
 <TR>
 <TD ALIGN=RIGHT VALIGN=BASELINE><A NAME="prod8">Action</A></TD>
