Bug 4625 - The bngl parser is now able to parse the matching label (format %number)
svn path=/vcell/trunk/VCell/; revision=19166

--- a/src/org/vcell/model/bngl/Parser.html
+++ b/src/org/vcell/model/bngl/Parser.html
@@ -95,7 +95,7 @@
 <TR>
 <TD ALIGN=RIGHT VALIGN=BASELINE><A NAME="prod12">MolecularTypePattern</A></TD>
 <TD ALIGN=CENTER VALIGN=BASELINE>::=</TD>
-<TD ALIGN=LEFT VALIGN=BASELINE>&lt;IDENTIFIER&gt; <A HREF="#prod20">Components</A></TD>
+<TD ALIGN=LEFT VALIGN=BASELINE>( &lt;IDENTIFIER&gt; ) <A HREF="#prod20">Components</A> ( &lt;VARIABLE_ATTRIBUTE&gt; ( &lt;INTEGER&gt; ) )?</TD>
 </TR>
 <TR>
 <TD ALIGN=RIGHT VALIGN=BASELINE><A NAME="prod20">Components</A></TD>
@@ -235,7 +235,7 @@
 <TR>
 <TD ALIGN=RIGHT VALIGN=BASELINE><A NAME="prod38">Float</A></TD>
 <TD ALIGN=CENTER VALIGN=BASELINE>::=</TD>
-<TD ALIGN=LEFT VALIGN=BASELINE>( &lt;FLOATING_POINT_LITERAL&gt; | &lt;INTEGER&gt; )</TD>
+<TD ALIGN=LEFT VALIGN=BASELINE>( &lt;FLOATING_POINT_LITERAL&gt; | &lt;INTEGER&gt; ( &lt;DOT&gt; )? )</TD>
 </TR>
 <TR>
 <TD ALIGN=RIGHT VALIGN=BASELINE><A NAME="prod37">Name</A></TD>
